# android-rust-library

./: .dockerignore  Dockerfile  LICENSE  README.md  cargo-config.toml  docker-build.sh  docker-run-all-rustc.sh  docker-run-all.sh  docker-run-basic.sh  docker-run-emulator.sh  docker-run-rustc-1cpu.sh  docker-run-rustc-2cpus.sh  docker-run-rustc-4cpus.sh  docker-run-rustc-8cpus.sh  docker-run-usb.sh  emulator-package.xml  emulator.sh  horcrux.dynamic_detect.patch  launch-app-release.sh  rustbuild-config.toml  script-java-incorrect-arm64.sh  script-java.sh  script-rust-nightly-nostrip.sh  script-rust-nightly.sh  stdarch.patch  strip-rust.sh
.github/workflows/: docker-build.yml  format.yml
scripts/: android-runner.sh  bench-haraka.sh  bench-horcrux.sh  bench.sh  build-application-relinked.sh  build-application-stage1.sh  build-application.sh  build-relinked.sh  clone-rustlang-1.67.0-1286ee23e.sh  clone-rustlang-head.sh  flamedisk.sh  launch-app-debug.sh  script-gradle.sh  script-java-incorrect-x86_64.sh  script-relinked.sh  script-rust-default-nostrip.sh  script-rust-default.sh  script-rust-stage1-nostrip.sh  script-rust-stage1.sh  setup.sh  stage0.sh  stage1.sh
src/MyRustSimdApplication/: build.gradle
src/MyRustSimdApplication/app/: build.gradle
src/MyRustSimdApplication/app/src/main/res/layout/: activity_main.xml
src/MyRustSimdApplication/app/src/main/res/values/: strings.xml
src/android-simd/: Cargo.toml
src/android-simd/src/: aes.rs  cpu.rs  gf2n.rs  lib.rs  logger.rs  pmul.rs
src/relinked/: Cargo.toml
src/relinked/src/: gf2n.rs  lib.rs
tools/flamedisk/: Cargo.toml
tools/flamedisk/src/: main.rs
(+2 files in other folders)
